# agent-prompts

./: AGENTS.md  PLAN.md  README.md  mise.toml
.beads/: issues.jsonl
biz/: gtm.md
containers/: agent-base.Dockerfile  mise.toml
context/: project-management.md
do/: architect.md  create-docker-image.md  create-prd.md  execute-epic.md  execute-task.md  formal.md  implement.md  plan.md  prepare-task.md  qa.md  review-rust-codebase.md  review.md
do/extra/: create-homebrew-tap.md  create-typst-template.md  generate-svg.md  update-homebrew-tap.md  verify-terraform.md
docs/: verification-strategy.md
gh/: generate-tasks.md
mcp/docker-agent/: .gitignore  AGENTS.md  Cargo.toml  README.md  mise.toml
mcp/docker-agent/src/: docker_manager.rs  http_transport.rs  main.rs  mcp_server.rs  tools.rs
mcp/docker-agent/tests/: mcp_protocol.rs
old/containers/: agent-base.Dockerfile  mise.config.toml  mise.toml
old/do/: create-prd.md  merge-wait.md  plan.md  pr.md  review-pr.md
old/do/bd/: execute-epic.md
old/do/extra/: create-homebrew-tap.md  verify-terraform.md
old/gh/: execute-epic.md  execute-task.md
old/roles/: astro-developer.md  planner.md  reviewer.md  rust-developer.md  tester.md
old/workflows/: dev-task-pr-gate.toml  dev-task.toml
pm/: github-issue.md
prompts/do/: implement.md  qa.md  review.md  security-review.md  sre.md
prompts/pm/: github-project-manager.md
prompts/stacks/: aws.md
stacks/: astro.md  mise.md  rust.md
workflows/: dev-task.toml  develop-feature.toml  issue-review.toml  pm-epic.toml  prd-to-issue.toml  precise-context.toml
(+2 files in other folders)
