[package]
name = "docker-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = { version = "0.1" }
bollard = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
kiters = "0.1"
futures = "0.3"
