[package]
name = "docker-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = { version = "0.1" }
axum = { version = "0.8", features = ["macros"] }
bollard = "0.15"
futures = "0.3"
kiters = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
uuid = { version = "1", features = ["v4"] }
